fix: user: !wip Align logo with postal address

--- a/app/style/high-tech-surveillance/style.sass
+++ b/app/style/high-tech-surveillance/style.sass
@@ -123,3 +123,5 @@ header
   content:''
   display: block
 
+.address-footer
+  display: flex
